--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "cros": "^1.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
