--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "cros": "^1.0.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1",
